<resources>
    <string name="app_name">GDLG_Demo</string>
    <string name="ch_edt_login_account">账 号</string>
    <string name="ch_edt_login_password">密 码</string>
    <string name="ch_edt_login_login">登  陆</string>
    <string name="ch_btn_login_forgot">忘记密码</string>
    <string name="ch_btn_login_register">用户注册</string>
    <string name="ch_btn_register_man">男</string>
    <string name="ch_btn_register_woman">女</string>
    <string name="ch_btn_login_remember">记住密码</string>
    <string name="ch_btn_login_autoLogin">自动登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add_group_chat">发起群聊</string>
    <string name="menu_add_friend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_payment">收付款</string>
    <string name="menu_help">帮助与反馈</string>
    <string name="menu_search">search</string>
    <string name="menu_add">add</string>
    <string name="txt_login_autologin">自动登录</string>
</resources>