<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_search"
        android:icon="@mipmap/search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_add"
        android:icon="@mipmap/add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom">

        <menu>
            <group>
                <item
                    android:id="@+id/menu_add_group_chat"
                    android:icon="@mipmap/menu_group_chat"
                    android:orderInCategory="1"
                    android:title="@string/menu_add_group_chat"
                    app:showAsAction="withText" />

                <item
                    android:id="@+id/menu_add_friend"
                    android:orderInCategory="2"
                    android:title="@string/menu_add_friend"
                    android:icon="@mipmap/menu_add_friend"
                    app:showAsAction="withText"/>

                <item
                    android:id="@+id/menu_scan"
                    android:orderInCategory="3"
                    android:title="@string/menu_scan"
                    android:icon="@mipmap/menu_scan"
                    app:showAsAction="withText"/>

                <item
                    android:id="@+id/menu_payment"
                    android:orderInCategory="4"
                    android:title="@string/menu_payment"
                    android:icon="@mipmap/menu_payment"
                    app:showAsAction="withText"/>

                <item
                    android:id="@+id/menu_help"
                    android:orderInCategory="5"
                    android:title="@string/menu_help"
                    android:icon="@mipmap/menu_help"
                    app:showAsAction="withText"/>
            </group>
        </menu>

    </item>
</menu>