<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/img_login_title"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@mipmap/gdlg_logo" />

    <EditText
        android:id="@+id/edt_login_account"
        style="@style/edt_login"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:text="2013202604032"
        android:hint="@string/ch_edt_login_account" />

    <EditText
        android:id="@+id/edt_login_password"
        style="@style/edt_login"
        android:layout_marginTop="15dp"
        android:hint="@string/ch_edt_login_password"
        android:inputType="textPassword"
        android:text="linweili"
        android:maxLength="16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cbx_login_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_login_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_autologin"
            android:textSize="18dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_false"
        android:enabled="false"
        android:text="@string/ch_edt_login_login"
        android:textColor="#eeffffff"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_login_forgot"
                style="@style/btn_login_bottom"
                android:text="@string/ch_btn_login_forgot" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#cccccc" />

            <Button
                android:id="@+id/btn_login_register"
                style="@style/btn_login_bottom"
                android:text="@string/ch_btn_login_register" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>