<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LinearLayoutActivity"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/gdlg_logo"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ch_edt_login_account"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/linear_edt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                style="@style/edt_login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ch_edt_login_password"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/linear_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_gravity="center"
                style="@style/edt_login"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/linear_rag_sex"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/linear_radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_btn_register_man"
                android:checked="true"/>

            <View
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/linear_radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_btn_register_woman" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/linear_cbx_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_btn_login_remember"/>

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/linear_cbx_autoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_btn_login_autoLogin"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/linear_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_true"
                android:layout_weight="1"
                android:text="@string/ch_edt_login_login"/>

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/linear_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_false"
                android:layout_weight="1"
                android:text="@string/ch_btn_login_register"/>

        </LinearLayout>

        <TextView
            android:id="@+id/linear_txt_print"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:padding="20dp"
            android:hint="打印信息"/>
    </LinearLayout>

</LinearLayout>